[gd_scene load_steps=5 format=3 uid="uid://cui0ccpbekoy4"]

[ext_resource type="Script" path="res://scripts/ui_elements/inventory_ui.gd" id="1_2rvp4"]
[ext_resource type="PackedScene" uid="uid://cr5yi8tfcph7r" path="res://scenes/ui_elements/slot.tscn" id="2_1k44n"]
[ext_resource type="PackedScene" uid="uid://obvkry1jikm4" path="res://scenes/ui_elements/button.tscn" id="3_jqavd"]
[ext_resource type="Texture2D" uid="uid://wo54tqp0yvin" path="res://assets/sprites/hud/Slot Pointer.png" id="4_1541g"]

[node name="Inventory" type="Control" groups=["inventory"]]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2rvp4")
slot = ExtResource("2_1k44n")
button = ExtResource("3_jqavd")

[node name="InventoryBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -240.0
offset_right = 456.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemsPanel" type="Panel" parent="InventoryBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -224.0
offset_right = 440.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="InventoryBackground/ItemsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -116.0
offset_right = 424.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 14

[node name="Pointer" type="TextureRect" parent="InventoryBackground/ItemsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_1541g")

[node name="DescriptionPanel" type="Panel" parent="InventoryBackground"]
layout_mode = 0
offset_left = 16.0
offset_top = 296.0
offset_right = 632.0
offset_bottom = 464.0

[node name="NameLabel" type="Label" parent="InventoryBackground/DescriptionPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 600.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 26
vertical_alignment = 1
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="InventoryBackground/DescriptionPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 600.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 16
autowrap_mode = 3

[node name="ButtonsPanel" type="Panel" parent="InventoryBackground"]
layout_mode = 0
offset_left = 648.0
offset_top = 296.0
offset_right = 888.0
offset_bottom = 464.0

[node name="GridContainer" type="GridContainer" parent="InventoryBackground/ButtonsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -28.0
offset_right = 80.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
